- Edit activities styled as dialogs
- Extended about dialog with licence panel
- Titles with "add" option on drawers
- Support to variable length functions
- Support to number in function names (3 alpha + digit|alpha)
- Extended the "exp" and "expUp" functions
- Functions "explode" and "explodeUp" hidden in interface (but still working)
- Better output for many functions (...)
- Fix: Glith opening a context menu with single click
- Fix: Error on expression like "3*-4"
- Fix: Dice pools with large number of rolls
- Huge refactoring of data manipulation layer
- Minor fix and improvements

v 1.4.4
- Resizable dice area
- Rich context menu
- Fixed bug related to results list
- Minor fix and improvements (splash screen, threads)

v 1.4.3
- Move dice through dice bags
- Clone dice and dice bags
- Swipe to delete a result
- Restore deleted results
- Link roll results on demand
- Function "abs"
- Fixed "rup" and "rdn" functions
- Fixed "rak" function
- Minor fix and improvements

v 1.4.0
- Import and Export definitions
- German translation
- Slightly improved UI
- Minor fix and improvement

v 1.3.7
- Fix error with Honeycomb tablets

v 1.3.6

v 1.3.5
- Support to "Dystopian Wars" system
- New function "min"
- New function "rand"
- Persistence of result list
- Fixed "bwheel" output
- New icons
- Slightly improved UI

v 1.3.4
- Support to "BASH!" system
- Fix compatibility error with Android 4.3

v 1.3.3
- Support to "Burning Wheel" system
- Support to "HERO" system
- Can swap dice name and result in result list
- Increased the max number of dice for each bag
- French translation
- Fixed volume control keys

v 1.3.2
- Added "Send suggestion" menu item
- Fixed popup duration on multiple roll
- Fixed minor bugs

v 1.3.1
- Fixed bug on Exploding rolls
- Fixed minor bugs

v 1.3.0
- Changed app name
- Bigger roll popup on larger display
- Multiple Dice Bags (profiles)
- Improved random algorithm
- Available light graphic for better performances