@@ -212,4 +212,11 @@
 		android:choiceMode="singleChoice"
 		/>
 	
+	<ListView style="?attr/ohmVariableDrawer"
+		android:id="@+id/mVariableList"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginLeft="@dimen/drawer_margin_keep_clean_land"
+		android:layout_gravity="right"
+		/>
 </android.support.v4.widget.DrawerLayout>
